# django-wallet

./: .gitignore  CLAUDE.md  Dockerfile  EXPLAINER.md  README.md  TEST_FORGE.md  docker-compose.yml  railway.toml  requirements.txt
.github/workflows/: test.yml
backend/: .env.example  Dockerfile  conftest.py  pyproject.toml  requirements.txt
backend/idempotency/: __init__.py  apps.py  exceptions.py  models.py  services.py
backend/idempotency/migrations/: 0001_initial.py  __init__.py
backend/idempotency/tests/: test_idempotency.py
backend/ledger/: __init__.py  admin.py  apps.py  exceptions.py  implementation.md  models.py  serializers.py  services.py  urls.py  views.py
backend/ledger/migrations/: 0001_initial.py  0002_ledgerentry_amount_positive_constraint.py  __init__.py
backend/ledger/tests/: factories.py  test_services.py
backend/payouts/: __init__.py  admin.py  apps.py  exceptions.py  models.py  serializers.py  services.py  state_machine.py  state_machine_old.py  urls.py  views.py  workers.py
backend/payouts/management/commands/: forge_seed.py  seed.py  setup_schedules.py
backend/payouts/migrations/: 0001_initial.py
backend/payouts/tests/: test_concurrency.py  test_services.py  test_state_machine.py
backend/playto/: __init__.py  health.py  settings.py  urls.py  wsgi.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  api.js  format.js
frontend/src/components/: BalanceCard.jsx  LedgerFeed.jsx  PayoutForm.jsx  PayoutHistoryTable.jsx
